--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,10 @@
     "@types/node": "^15.0.1",
     "@vitejs/plugin-vue": "^1.2.2",
     "@vue/compiler-sfc": "^3.0.5",
+    "bulma": "^0.9.2",
+    "node-sass": "^6.0.0",
+    "sass": "^1.32.12",
+    "sass-loader": "^11.0.1",
     "typescript": "^4.1.3",
     "vite": "^2.2.3",
     "vue-tsc": "^0.0.24"
